This will disable the behavior on Windows 10 in which touchpad scrolling on Windows 10 will also activate/focus the window.

BUG=601116

Review URL: https://codereview.chromium.org/1867953002

Cr-Commit-Position: refs/heads/master@{#386718}

Former-commit-id: 0b272b68a3aaf908a4300326290d6f04efb838ba